Fix styles and overflow in home/todo page

--- a/src/styles/Todos.module.css
+++ b/src/styles/Todos.module.css
@@ -1,16 +1,11 @@
-.container {
-  padding-right: 2rem;
-}
-
 .fab {
   position: fixed;
-  bottom: 1rem;
-  left: 25%;
+  bottom: 2rem;
+  left: 28%;
 }
 
 .todoList {
-  padding: 0;
-  margin: 0;
-  height: 90vh;
+  overflow: auto;
+  max-height: 93vh;
   border-right: rgb(200, 200, 200) solid 1px;
 }
